force-app/main/default/objects/Price_Book__mdt/Price_Book__mdt.object-meta.xml
<CustomObject>
    <label>Price Book</label>
    <pluralLabel>Price Books</pluralLabel>
</CustomObject>