force-app/main/default/objects/Price_Book__mdt/fields/Amount_Includes_VAT__c.field-meta.xml
<CustomField>
    <fullName>Amount_Includes_VAT__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked (true), the prices in this pricebook already include VAT. If unchecked (false), prices are excluding VAT and VAT will be added by Reepay/Frisbii. Denmark/Sweden = true (prices incl. VAT), Ireland = false (prices excl. VAT).</description>
    <inlineHelpText>Check if prices in this pricebook include VAT. Uncheck for markets where prices are shown excluding VAT (e.g., Ireland).</inlineHelpText>
    <label>Amount Includes VAT</label>
    <type>Checkbox</type>
</CustomField>