force-app/main/default/objects/Price_Book__mdt/fields/Custom_Permission__c.field-meta.xml
<CustomField>
    <fullName>Custom_Permission__c</fullName>
    <label>Custom Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>