force-app/main/default/objects/Price_Book__mdt/fields/Encoded_Private_Key__c.field-meta.xml
<CustomField>
    <fullName>Encoded_Private_Key__c</fullName>
    <label>Encoded Private Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>