force-app/main/default/objects/Price_Book__mdt/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <defaultValue>&quot;standard:price_books&quot;</defaultValue>
    <description>The SLDS icon name to display for this pricebook in the icon picker UI. Format: category:iconName (e.g., standard:price_books, custom:custom1)</description>
    <inlineHelpText>Enter an SLDS icon name like &quot;standard:price_books&quot; or &quot;custom:custom1&quot;</inlineHelpText>
    <label>Icon</label>
    <length>100</length>
    <type>Text</type>
</CustomField>