force-app/main/default/objects/Price_Book__mdt/fields/Internal_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Internal_Identifier__c</fullName>
    <inlineHelpText>This is a unique, required value on Price Book, that functions as a unique, internal identifier</inlineHelpText>
    <label>Internal Identifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>