force-app/main/default/objects/Price_Book__mdt/fields/Test_Encoded_Private_Key__c.field-meta.xml
<CustomField>
    <fullName>Test_Encoded_Private_Key__c</fullName>
    <description>Base64 encoded Reepay private key for TEST/Sandbox environments. Used when not in production org.</description>
    <label>Test Encoded Private Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>