force-app/main/default/objects/Price_Book__mdt/fields/VAT_Rate__c.field-meta.xml
<CustomField>
    <fullName>VAT_Rate__c</fullName>
    <description>The VAT rate for this pricebook as a decimal (e.g., 0.25 for 25%, 0.23 for 23%). Used when sending invoices to Reepay/Frisbii.</description>
    <inlineHelpText>Enter the VAT rate as a decimal. Examples: 0.25 (Denmark 25%), 0.23 (Ireland 23%), 0 (no VAT)</inlineHelpText>
    <label>VAT Rate</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>